Fixing footer problem on mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 body {
     background-color: #858585;
     font-family: Arial, sans-serif;
+    margin-bottom: 150px;
 }
 /* Applies styles to images */
 .vdlh {
